Update credits for level design (on homepage only)

--- a/homepage/input/credits.html
+++ b/homepage/input/credits.html
@@ -113,6 +113,7 @@
         <li>capkoh&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Level design)</li>
+        <li>daydreamer&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Russian translation)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Xerxes M. Dynatos&nbsp;&nbsp;&nbsp;(Level design)</li>
@@ -123,6 +124,9 @@
         <li>Roberto Garc&iacute;a&nbsp;&nbsp;&nbsp;(Spanish translation)</li>
         <li>Andy Geldmacher&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Edwin Groothuis&nbsp;&nbsp;&nbsp;(FreeBSD port)</li>
+        <li>Daniel Hadas&nbsp;&nbsp;&nbsp;(Level design)</li>
+        <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Level design)</li>
+        <li>Hairball&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>M&aacute;t&eacute; Lehel Juh&aacute;sz&nbsp;&nbsp;&nbsp;(Hungarian translation)</li>
         <li>Johannes H&uuml;sing&nbsp;&nbsp;&nbsp;(Level design)</li>
@@ -154,6 +158,7 @@
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(RPM specfile)</li>
         <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Alex Smith&nbsp;&nbsp;&nbsp;(Level design)</li>
+        <li>Alan Smithee&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Jon Sneyers&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Spaceman&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Ulf Stegemann&nbsp;&nbsp;&nbsp;(Level design)</li>
@@ -165,6 +170,7 @@
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(.desktop file)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Manual page)</li>
+        <li>Zephyr&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Yuriy Zhyromskiy&nbsp;&nbsp;&nbsp;(Russian Manual and Homepage Translation, Slackware Package)</li>
         <li>/dev/null&nbsp;&nbsp;&nbsp;(Level design)</li>
     </ul>
