--- a/homepage/input/credits_de.html
+++ b/homepage/input/credits_de.html
@@ -114,6 +114,7 @@
         <li>capkoh&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>daydreamer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Russische &Uuml;bersetzung)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Xerxes M. Dynatos&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -124,6 +125,9 @@
         <li>Roberto Garc&iacute;a&nbsp;&nbsp;&nbsp;(Spanische &Uuml;bersetzung)</li>
         <li>Andy Geldmacher&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Edwin Groothuis&nbsp;&nbsp;&nbsp;(FreeBSD Portierung)</li>
+        <li>Daniel Hadas&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Hairball&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>M&aacute;t&eacute; Lehel Juh&aacute;sz&nbsp;&nbsp;&nbsp;(Ungarische &Uuml;bersetzung)</li>
         <li>Johannes H&uuml;sing&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -155,6 +159,7 @@
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(RPM specfile)</li>
         <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Alex Smith&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Alan Smithee&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Jon Sneyers&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Spaceman&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Ulf Stegemann&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -166,6 +171,7 @@
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(.desktop file)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Manual page f&uuml;r Unix)
+        <li>Zephyr&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Yuriy Zhyromskiy&nbsp;&nbsp;&nbsp;(Russisches Handbuch und Homepage, Slackware Paket)</li>
         <li>/dev/null&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
     </ul>
