--- a/homepage/input/credits_ru.html
+++ b/homepage/input/credits_ru.html
@@ -103,22 +103,34 @@
     <p>Наша признательность различным меньшим помощникам:</p>
     <ul>
         <li>Roberto Bardin&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Thomas Bernhardt&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Helge Blohmer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Nathan Bronecke&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Harry Bruder&nbsp;&nbsp;&nbsp;(LotM articles)</li>
         <li>Alain Busser&nbsp;&nbsp;&nbsp;(Дизайн уровней, французский перевод игры и руководства)</li>
         <li>Guy Busser&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>capkoh&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Christoph & Anita&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>daydreamer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Русский перевод)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Xerxes M. Dynatos&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Edward&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Manuel Eisentraut&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Stephanie Fabian&nbsp;&nbsp;&nbsp;(Бесценные сообщения об ошибках)</li>
+        <li>Johann Freymuth&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Roberto Garc&iacute;a&nbsp;&nbsp;&nbsp;(Испанский перевод)</li>
         <li>Andy Geldmacher&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Edwin Groothuis&nbsp;&nbsp;&nbsp;(Портирование на FreeBSD)</li>
+        <li>Daniel Hadas&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Hairball&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>M&aacute;t&eacute; Lehel Juh&aacute;sz&nbsp;&nbsp;&nbsp;(Венгерский перевод)</li>
+        <li>Johannes H&uuml;sing&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Brian Huffman&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Samuele Kaplun&nbsp;&nbsp;&nbsp;(Итальянский перевод)</li>
         <li>Jens-Christian Korth&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Manuel K&ouml;nig&nbsp;&nbsp;&nbsp;(Дизайн уровней, сообщения об ошибках)</li>
@@ -126,19 +138,27 @@
         <li>Joona Laire&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Markus Laire&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Dominik Lehmann&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Dominik Leipold&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Edward Leuf&nbsp;&nbsp;&nbsp;(Отзывы, сообщения об ошибках)</li>
         <li>Ingo van Lil&nbsp;&nbsp;&nbsp;(Отзывы, сообщения об ошибках)</li>
         <li>Frank van der Loo&nbsp;&nbsp;&nbsp;(Немецкий перевод)</li>
         <li>Sidney Markowitz&nbsp;&nbsp;&nbsp;(Портирование на Mac OS X)</li>
-        <li>Barry & Lori Mead&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Barry &amp; Lori Mead&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Lurcane &nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Корректура английских текстов)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Португальский перевод)</li>
         <li>Daniel Nylander&nbsp;&nbsp;&nbsp;(Шведский перевод)</li>
         <li>Andreas Persenius&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Mark Pulley&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Rudolf&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Peter Santo&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Tobias Schmidbauer&nbsp;&nbsp;&nbsp;(Мастер установки для Windows и значок)</li>
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(специальный файл RPM)</li>
+        <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Alex Smith&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Alan Smithee&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Jon Sneyers&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Spaceman&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Ulf Stegemann&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
@@ -146,9 +166,12 @@
         <li>Mikke Surakka (Финский перевод)</li>
         <li>Andrzej Szombierski&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Tacvek&nbsp;&nbsp;&nbsp;(Обновление Lua 5.1)</li>
+        <li>James Taylor&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(Файл .desktop)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Страница руководства)</li>
+        <li>Zephyr&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Yuriy Zhyromskiy&nbsp;&nbsp;&nbsp;(Русский перевод руководства и домашней страницы, пакет для Slackware)</li>
+        <li>/dev/null&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
     </ul>
 </div>
