Credits homepage update

--- a/homepage/input/credits.html
+++ b/homepage/input/credits.html
@@ -61,10 +61,6 @@
             <td>Forum mag-heut.net administration, Level design</td>
         </tr>
         <tr>
-            <td>Dustin&nbsp;Norlander</td>
-            <td>Designer of the &ldquo;Dustismo&rdquo; font</td>
-        </tr>
-        <tr>
             <td>Jennifer&nbsp;Robertson</td>
             <td>Graphics second generation</td>
         </tr>
@@ -79,10 +75,6 @@
         <tr>
             <td>Erich&nbsp;Schubert</td>
             <td>Debian/Ubuntu packages, level design</td>
-        </tr>
-        <tr>
-            <td>Lukas Sch&uuml;ller</td>
-            <td>Level design</td>
         </tr>
         <tr>
             <td>Andrew&nbsp;&ldquo;Necros&rdquo;&nbsp;Sega</td>
@@ -144,7 +136,7 @@
         <li>Frank van der Loo&nbsp;&nbsp;&nbsp;(Dutch translation)</li>
         <li>Sidney Markowitz&nbsp;&nbsp;&nbsp;(Mac OS X port)</li>
         <li>Barry &amp; Lori Mead&nbsp;&nbsp;&nbsp;(Level design)</li>
-        <li>Lurcane &nbsp;&nbsp;&nbsp;(Level design)</li>
+        <li>Lurcane&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(English proof reading)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Portuguese translation)</li>
@@ -155,6 +147,7 @@
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Peter Santo&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Tobias Schmidbauer&nbsp;&nbsp;&nbsp;(Windows installer and icon)</li>
+        <li>Lukas Sch&uuml;ller&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(RPM specfile)</li>
         <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Alex Smith&nbsp;&nbsp;&nbsp;(Level design)</li>
@@ -163,7 +156,7 @@
         <li>Spaceman&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Ulf Stegemann&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>J&uuml;rgen Sticht&nbsp;&nbsp;&nbsp;(Level design)</li>
-        <li>Mikke Surakka (Finnish Translation)</li>
+        <li>Mikke Surakka&nbsp;&nbsp;&nbsp;(Finnish Translation)</li>
         <li>Andrzej Szombierski&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Tacvek&nbsp;&nbsp;&nbsp;(Lua 5.1 upgrade)</li>
         <li>James Taylor&nbsp;&nbsp;&nbsp;(Level design)</li>
