--- a/homepage/input/credits_de.html
+++ b/homepage/input/credits_de.html
@@ -61,11 +61,6 @@
             <td>Forum mag-heut.net Administration, Landschaftsdesign</td>
         </tr>
         <tr>
-            <td>Dustin&nbsp;Norlander</td>
-            <td>Designer der Schriftart &bdquo;Dustismo&ldquo;</td>
-        </tr>
-
-        <tr>
             <td>Jennifer&nbsp;Robertson</td>
             <td>Grafik der zweiten Generation</td>
         </tr>
@@ -80,10 +75,6 @@
         <tr>
             <td>Erich&nbsp;Schubert</td>
             <td>Debian/Ubuntu-Pakete, Landschaftsdesign</td>
-        </tr>
-        <tr>
-            <td>Lukas Sch&uuml;ller</td>
-            <td>Landschaftsdesign</td>
         </tr>
         <tr>
             <td>Andrew&nbsp;&bdquo;Necros&ldquo;&nbsp;Sega</td>
@@ -145,7 +136,7 @@
         <li>Frank van der Loo&nbsp;&nbsp;&nbsp;(Niederl&auml;ndische &Uuml;bersetzung)</li>
         <li>Sidney Markowitz&nbsp;&nbsp;&nbsp;(Mac OS X Portierung)</li>
         <li>Barry &amp; Lori Mead&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Lurcane &nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Lurcane&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Englisch Korrektur lesen)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
@@ -156,6 +147,7 @@
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Peter Santo&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Tobias Schmidbauer&nbsp;&nbsp;&nbsp;(Windows Installer und Icon)</li>
+        <li>Lukas Sch&uuml;ller&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(RPM specfile)</li>
         <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Alex Smith&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -164,7 +156,7 @@
         <li>Spaceman&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Ulf Stegemann&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>J&uuml;rgen Sticht&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Mikke Surakka (Finnische &Uuml;bersetzung)</li>
+        <li>Mikke Surakka&nbsp;&nbsp;&nbsp;(Finnische &Uuml;bersetzung)</li>
         <li>Andrzej Szombierski&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Tacvek&nbsp;&nbsp;&nbsp;(Lua 5.1 Upgrade)</li>
         <li>James Taylor&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
