--- a/homepage/input/credits_ru.html
+++ b/homepage/input/credits_ru.html
@@ -61,10 +61,6 @@
             <td>Администрирование форума mag-heut.net, дизайн уровней</td>
         </tr>
         <tr>
-            <td>Dustin&nbsp;Norlander</td>
-            <td>Дизайнер шрифта "Dustismo"</td>
-        </tr>
-        <tr>
             <td>Jennifer&nbsp;Robertson</td>
             <td>Второе поколение графики</td>
         </tr>
@@ -81,11 +77,7 @@
             <td>Пакеты для Debian/Ubuntu, дизайн уровней</td>
         </tr>
         <tr>
-            <td>Lukas Sch&uuml;ller</td>
-            <td>Дизайн уровней</td>
-        </tr>
-        <tr>
-            <td>Andrew&nbsp;"Necros"&nbsp;Sega</td>
+            <td>Andrew&nbsp;&ldquo;Necros&rdquo;&nbsp;Sega</td>
             <td>Музыка в меню (Pentagonal Dreams)</td>
         </tr>
         <tr>
@@ -144,7 +136,7 @@
         <li>Frank van der Loo&nbsp;&nbsp;&nbsp;(Немецкий перевод)</li>
         <li>Sidney Markowitz&nbsp;&nbsp;&nbsp;(Портирование на Mac OS X)</li>
         <li>Barry &amp; Lori Mead&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
-        <li>Lurcane &nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Lurcane&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Корректура английских текстов)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Португальский перевод)</li>
@@ -155,6 +147,7 @@
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Peter Santo&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Tobias Schmidbauer&nbsp;&nbsp;&nbsp;(Мастер установки для Windows и значок)</li>
+        <li>Lukas Sch&uuml;ller&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(специальный файл RPM)</li>
         <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Alex Smith&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
@@ -163,7 +156,7 @@
         <li>Spaceman&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Ulf Stegemann&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>J&uuml;rgen Sticht&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
-        <li>Mikke Surakka (Финский перевод)</li>
+        <li>Mikke Surakka&nbsp;&nbsp;&nbsp;(Финский перевод)</li>
         <li>Andrzej Szombierski&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Tacvek&nbsp;&nbsp;&nbsp;(Обновление Lua 5.1)</li>
         <li>James Taylor&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
