Fix that alphabetical order

--- a/homepage/input/credits_de.html
+++ b/homepage/input/credits_de.html
@@ -99,7 +99,7 @@
         <li>Helge Blohmer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Nathan Bronecke&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Harry Bruder&nbsp;&nbsp;&nbsp;(LdM-Artikel)</li>
-        <li>Alain Busser&nbsp;&nbsp;&nbsp;(Landschaftsdesign), franz&ouml;sische &Uuml;bersetzung und Handbuch)</li>
+        <li>Alain Busser&nbsp;&nbsp;&nbsp;(Landschaftsdesign, franz&ouml;sische &Uuml;bersetzung und Handbuch)</li>
         <li>Guy Busser&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>capkoh&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -120,12 +120,12 @@
         <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Hairball&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>M&aacute;t&eacute; Lehel Juh&aacute;sz&nbsp;&nbsp;&nbsp;(Ungarische &Uuml;bersetzung)</li>
-        <li>Johannes H&uuml;sing&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Brian Huffman&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Johannes H&uuml;sing&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>M&aacute;t&eacute; Lehel Juh&aacute;sz&nbsp;&nbsp;&nbsp;(Ungarische &Uuml;bersetzung)</li>
         <li>Samuele Kaplun&nbsp;&nbsp;&nbsp;(Italienische &Uuml;bersetzung)</li>
+        <li>Manuel K&ouml;nig&nbsp;&nbsp;&nbsp;(Landschaftsdesign, Fehlerberichte)</li>
         <li>Jens-Christian Korth&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Manuel K&ouml;nig&nbsp;&nbsp;&nbsp;(Landschaftsdesign), Fehlerberichte)</li>
         <li>Johannes Laire&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Joona Laire&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Markus Laire&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -134,17 +134,17 @@
         <li>Edward Leuf&nbsp;&nbsp;&nbsp;(Feedback, Fehlerberichte)</li>
         <li>Ingo van Lil&nbsp;&nbsp;&nbsp;(Feedback, Fehlerberichte)</li>
         <li>Frank van der Loo&nbsp;&nbsp;&nbsp;(Niederl&auml;ndische &Uuml;bersetzung)</li>
+        <li>Lurcane&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Sidney Markowitz&nbsp;&nbsp;&nbsp;(Mac OS X Portierung)</li>
         <li>Barry &amp; Lori Mead&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Lurcane&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Englisch Korrektur lesen)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
         <li>Daniel Nylander&nbsp;&nbsp;&nbsp;(Schwedische &Uuml;bersetzung)</li>
         <li>Andreas Persenius&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Mark Pulley&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Rudolf&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Peter Santo&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Tobias Schmidbauer&nbsp;&nbsp;&nbsp;(Windows Installer und Icon)</li>
         <li>Lukas Sch&uuml;ller&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
