Fix unescaped html special character

--- a/homepage/input/credits_ru.html
+++ b/homepage/input/credits_ru.html
@@ -104,7 +104,7 @@
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>capkoh&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
-        <li>Christoph & Anita&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>daydreamer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Русский перевод)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
