Webpages with new documentation material

--- a/homepage/input/support_de.html
+++ b/homepage/input/support_de.html
@@ -28,7 +28,7 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
 
   <p>Viel Spa&szlig;!</p>
 
-<!--
+
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="documentation">Dokumentation f&uuml;r Enigma 1.20</a></h3>
   <p>Das vollst&auml;ndige Benutzerhandbuch ist in mehreren Sprachen jeder
@@ -37,21 +37,21 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
 
   <ul>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="Englisch" title="Englisch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma.html">English User manual (html)</a></li>
+      <a href="manual_1.20/manual/enigma.html">English User manual (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="Englisch" title="Englisch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma.pdf">English User manual (pdf)</a></li>
+      <a href="manual_1.20/manual/enigma.pdf">English User manual (pdf, 1.7 MB)</a></li>
     <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="Deutsch" title="Deutsch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_de.html">Deutsches Benutzerhandbuch (html)</a></li>
+      <a href="manual_1.20/manual/enigma_de.html">Deutsches Benutzerhandbuch (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="Deutsch" title="Deutsch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_de.pdf">Deutsches Benutzerhandbuch (pdf)</a></li>
+      <a href="manual_1.20/manual/enigma_de.pdf">Deutsches Benutzerhandbuch (pdf, 1.7 MB)</a></li>
     <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="Franz&ouml;sisch" title="Franz&ouml;sisch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_fr.html">Manuel Fran&ccedil;ais (html)</a></li>
+      <a href="manual_1.20/manual/enigma_fr.html">Manuel Fran&ccedil;ais (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="Franz&ouml;sisch" title="Franz&ouml;sisch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_fr.pdf">Manuel Fran&ccedil;ais (pdf)</a></li>
+      <a href="manual_1.20/manual/enigma_fr.pdf">Manuel Fran&ccedil;ais (pdf, 1.7 MB)</a></li>
     <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russisch" title="Russisch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_ru.html">Russisches Benutzerhandbuch (html)</a></li>
+      <a href="manual_1.20/manual/enigma_ru.html">Russisches Benutzerhandbuch (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russisch" title="Russisch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_ru.pdf">Russisches Benutzerhandbuch (pdf, aus der html Version gedruckt)</a></li>
+      <a href="manual_1.20/manual/enigma_ru.pdf">Russisches Benutzerhandbuch (pdf, aus der html Version gedruckt, 1.7 MB)</a></li>
   </ul>
 
   <p>Desweiteren stellen wir ein Referenzhandbuch zur Verf&uuml;gung, das
@@ -59,13 +59,26 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
   werden nicht nur f&uuml;r Poweruser und Entwickler hilfreich sein.</p>
   <ul>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="Englisch" title="Englisch">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma-ref.html">Englisches Referenzhandbuch (html)</a></li>
+      <a href="manual_1.20/refman/enigma-ref.html">Englisches Referenzhandbuch (html, 2.4 MB)</a></li>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/refman/enigma-ref.pdf">Englisches Referenzhandbuch (pdf, 6.9 MB)</a></li>
   </ul>
+
+  <p>Die Schnittstelle zur Programmierung von Levels (API) wurde in Enigma 1.20 von Grund
+  auf neu konzipiert. Um den Levelentwicklern den Umstieg zu erleichtern, haben wir die wichtigsten
+  Aspekte dieser neuen API in folgenden Cheat Sheets zusammen gefasst. (Diese Informationen sind
+  auch im Referenzhandbuch zu finden, allerdings auf verschiedene Kapitel verteilt.)</p>
+  <ul>
+    <li> <a href="manual_1.20/sheets/level_api_tds.pdf">Level API, Task Driven Approach (pdf)</a></li>
+    <li> <a href="manual_1.20/sheets/level_api_syntax.pdf">Level API, Syntax (pdf)</a></li>
+    <li> <a href="manual_1.20/sheets/level_api_syntax_examples.pdf">Level API, Syntax Examples (pdf)</a></li>
+    <li> <a href="manual_1.20/sheets/level_api_constants.pdf">Level API, Constant Literals (pdf)</a></li>
+  </ul>
+
   <p>Aktuell gibt es keine weiteren &Uuml;bersetzungen der
   Enigma-Handb&uuml;cher. Bitte senden Sie uns eine Email an <a
   href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a>, falls
   Sie eine &Uuml;bersetzung beisteuern wollen.</p>
--->
 
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="documentation">Dokumentation f&uuml;r Enigma 1.00</a></h3>
@@ -100,10 +113,6 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="Englisch" title="Englisch">&nbsp;&nbsp;
       <a href="manual/enigma-ref.html">Englisches Referenzhandbuch (html)</a></li>
   </ul>
-  <p>Aktuell gibt es keine weiteren &Uuml;bersetzungen der
-  Enigma-Handb&uuml;cher. Bitte senden Sie uns eine Email an <a
-  href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a>, falls
-  Sie eine &Uuml;bersetzung beisteuern wollen.</p>
 
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="forum">Forum</a></h3>
@@ -233,4 +242,3 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
   Handel, mailen Sie uns bitte an
   <a href="mailto:donation@enigma-game.org" >donation@enigma-game.org</a>
   und wir werden ein Spendenkonto f&uuml;r Enigma einrichten.</p>
-
