--- a/homepage/input/support.html
+++ b/homepage/input/support.html
@@ -20,7 +20,7 @@ for the level of the month.</p>
 
   <p>Have fun!</p>
 
-<!--
+
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
   <a name="documentation">Documentation for Enigma 1.20</a></h3>
   <p>The complete user manual is included in multiple languages with every release
@@ -29,21 +29,21 @@ for the level of the month.</p>
 
   <ul>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma.html">English User manual (html)</a></li>
+      <a href="manual_1.20/manual/enigma.html">English User manual (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma.pdf">English User manual (pdf)</a></li>
+      <a href="manual_1.20/manual/enigma.pdf">English User manual (pdf, 1.7 MB)</a></li>
     <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="German" title="German">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_de.html">Deutsches Benutzerhandbuch (html)</a></li>
+      <a href="manual_1.20/manual/enigma_de.html">Deutsches Benutzerhandbuch (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="German" title="German">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_de.pdf">Deutsches Benutzerhandbuch (pdf)</a></li>
+      <a href="manual_1.20/manual/enigma_de.pdf">Deutsches Benutzerhandbuch (pdf, 1.7 MB)</a></li>
     <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="French" title="French">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_fr.html">Manuel Fran&ccedil;ais (html)</a></li>
+      <a href="manual_1.20/manual/enigma_fr.html">Manuel Fran&ccedil;ais (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="French" title="French">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_fr.pdf">Manuel Fran&ccedil;ais (pdf)</a></li>
+      <a href="manual_1.20/manual/enigma_fr.pdf">Manuel Fran&ccedil;ais (pdf, 1.7 MB)</a></li>
     <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russian" title="Russian">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_ru.html">Russian User manual (html)</a></li>
+      <a href="manual_1.20/manual/enigma_ru.html">Russian User manual (html)</a></li>
     <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russian" title="Russian">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma_ru.pdf">Russian User manual (pdf, printed from html version)</a></li>
+      <a href="manual_1.20/manual/enigma_ru.pdf">Russian User manual (pdf, printed from html version, 1.7 MB)</a></li>
   </ul>
 
   <p>Further on we provide a reference manual which is included in the Enigma
@@ -51,12 +51,25 @@ for the level of the month.</p>
   power users and developers.</p>
   <ul>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
-      <a href="manual_1.20/enigma-ref.html">English Reference manual (html)</a></li>
+      <a href="manual_1.20/refman/enigma-ref.html">English Reference manual (html, 2.4 MB)</a></li>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/refman/enigma-ref.pdf">English Reference manual (pdf, 6.9 MB)</a></li>
   </ul>
+
+  <p>Enigma 1.20 comes with a new level programming interface (API) redesigned from scratch.
+  To help level developers we compiled the most important aspects of this fundamentally different
+  new API into a set of cheat sheets. (All information shown here can also be found in the reference
+  manual but is scattered to many spots.</p>
+  <ul>
+    <li> <a href="manual_1.20/sheets/level_api_tds.pdf">Level API, Task Driven Approach (pdf)</a></li>
+    <li> <a href="manual_1.20/sheets/level_api_syntax.pdf">Level API, Syntax (pdf)</a></li>
+    <li> <a href="manual_1.20/sheets/level_api_syntax_examples.pdf">Level API, Syntax Examples (pdf)</a></li>
+    <li> <a href="manual_1.20/sheets/level_api_constants.pdf">Level API, Constant Literals (pdf)</a></li>
+  </ul>
+
   <p>No other translations of the Enigma manuals are available so far.
   Please send an email to <a  href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a> if
   you would like to contribute a translation.</p>
--->
 
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
   <a name="documentation">Documentation for Enigma 1.00</a></h3>
@@ -91,10 +104,6 @@ for the level of the month.</p>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
       <a href="manual/enigma-ref.html">English Reference manual (html)</a></li>
   </ul>
-  <p>No other translations of the Enigma manuals are available so far.
-  Please send an email to <a
-  href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a> if
-  you would like to contribute a translation.</p>
 
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
   <a name="forum">User Forum</a></h3>
