More Page Updates

--- a/homepage/input/download.html
+++ b/homepage/input/download.html
@@ -12,7 +12,53 @@ by the following critera:
 </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
-  <a name="stable">Stable Release (Version 1.01)</a></h3>
+  <a name="stable">Stable Release (Version 1.20)</a></h3>
+
+  <p>The md5- and sha256-numbers below are checksums, with which you can
+  inspect the authenticity and exactness of your downloads. They have no
+  relevance for installing or playing Enigma.</p>
+
+  <ul>
+  <li><ul style="list-style-type:none"><li><b>Windows TODO and later, including Windows TODO</b>
+    <a href="http://downloads.sourceforge.net/project/enigma-game/TODO">
+        Full Installer (1.20)</a> appr. TODO MB</li>
+    <li>md5 - TODO</li>
+    <li>sha256 - TODO</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Source Code 32/64-bit compatible, revision TODO </b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/TODO.tar.gz">
+	tar.gz (1.20)</a> appr. TODO MB</li>
+    <li>md5 - TODO</li>
+    <li>sha256 - TODO</li>
+    </ul></li>
+
+  </ul>
+
+  <p>All packages are available at sourceforge. In case of download problems try a
+  direct download from <a href="http://sourceforge.net/projects/enigma-game/files/">
+  sourceforge</a> and give all servers that are offered a chance.<p>
+
+  <p>Please report problems with any of these packages to the <a
+    href="mailto:enigma-devel@nongnu.org">Enigma mailing list</a>.</p>
+
+  <!-- TODO: Packages are not up to date yet -->
+  <!-- <p>Packages for some other operating systems are made available by -->
+  <!-- third parties:</p> -->
+
+  <!-- <ul> -->
+  <!-- <li><a href="http://packages.debian.org/sid/enigma"> -->
+  <!-- 	Debian</a></li> -->
+  <!-- <li><a href="http://www.freshports.org/games/enigma/"> -->
+  <!-- 	FreeBSD</a></li> -->
+  <!-- <li><a href="http://packages.gentoo.org/package/games-puzzle/enigma"> -->
+  <!--       Gentoo Linux</a></li> -->
+  <!-- <li><a href="http://packages.ubuntu.com/quantal/games/enigma"> -->
+  <!-- 	Ubuntu</a></li> -->
+  <!-- </ul> -->
+
+<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
+  <a name="stable">Old stable Release (Version 1.01)</a></h3>
 
   <p>Besides 'Full' packages, we provide size-reduced 'Minimum' packages
   for users with a low bandwidth. 'Minimum' and 'Source' packages do not include
