--- a/homepage/input/download_ru.html
+++ b/homepage/input/download_ru.html
@@ -13,6 +13,50 @@
 </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
+  <a name="stable">Стабильный выпуск (Версия 1.20)</a></h3>
+
+  <p>Числа md5 и sha256 ниже это контрольные суммы, с помощью которых Вы можете проверить подлинность и полноту
+  Ваших загрузок. Они не влияют на установку и процесс игры в Enigma.</p>
+
+  <ul>
+  <li><ul style="list-style-type:none"><li><b>Windows TODO и выше, включая Windows TODO</b>
+    <a href="http://downloads.sourceforge.net/project/enigma-game/TODO">
+        Полный мастер установки (1.20)</a> прибл. TODO MB</li>
+    <li>md5 - TODO</li>
+    <li>sha256 - TODO</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Исходные коды, совместимые с 32/64-bit, ревизия TODO</b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/TODO.tar.gz">
+	tar.gz (1.20)</a> прибл. TODO MB</li>
+    <li>md5 - TODO</li>
+    <li>sha256 - TODO</li>
+    </ul></li>
+
+  </ul>
+
+  <p>Все пакеты доступны на sourceforge. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
+  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
+
+  <p>Пожалуйста, сообщите о проблемах с любым из этих пакетов в <a
+    href="mailto:enigma-devel@nongnu.org">список рассылки Enigma</a>.</p>
+
+  <!-- TODO: Packages are not up to date yet -->
+  <!-- <p>Пакеты для некоторых других операционных систем предоставляются третьими лицами:</p> -->
+
+  <!-- <ul> -->
+  <!-- <li><a href="http://packages.debian.org/sid/enigma"> -->
+  <!-- 	Debian</a></li> -->
+  <!-- <li><a href="http://www.freshports.org/games/enigma/"> -->
+  <!-- 	FreeBSD</a></li> -->
+  <!-- <li><a href="http://packages.gentoo.org/package/games-puzzle/enigma"> -->
+  <!--       Gentoo Linux</a></li> -->
+  <!-- <li><a href="http://packages.ubuntu.com/quantal/games/enigma"> -->
+  <!-- 	Ubuntu</a></li> -->
+  <!-- </ul> -->
+
+<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
   <a name="stable">Стабильный выпуск (Версия 1.01)</a></h3>
 
   <p>Наряду с 'Полными' пакетами, мы предлагаем урезанные 'Минимальные' пакеты
