--- a/homepage/input/download_de.html
+++ b/homepage/input/download_de.html
@@ -16,7 +16,56 @@ dieser Seite nach folgenden Kategorien sortiert:
 </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
-  <a name="stable">Stabile Version (Version 1.01)</a></h3>
+  <a name="stable">Stabile Version (Version 1.20)</a></h3>
+
+  <p>Die md5- und sha256-Zahlen sind Checksummen, mit denen Sie die
+  Authentizit&auml;t und Exaktheit Ihres Downloads &uuml;berpr&uuml;fen
+  k&ouml;nnen, unter Verwendung entsprechender Programme. F&uuml;r die
+  Installation oder Nutzung von Enigma sind sie nicht von Bedeutung.</p>
+
+  <ul>
+  <li><ul style="list-style-type:none"><li><b>Windows TODO und sp&auml;ter, einschlie&szlig;lich Windows TODO</b>
+    <a href="http://downloads.sourceforge.net/project/enigma-game/TODO">
+        Vollst&auml;ndige Installation (1.20)</a> etwa TODO MB</li>
+    <li>md5 - TODO</li>
+    <li>sha256 - TODO</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Quellcode 32/64-Bit kompatibel, Revision TODO</b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/TODO.tar.gz">
+	tar.gz (1.20)</a> etwa TODO MB</li>
+    <li>md5 - TODO</li>
+    <li>sha256 - TODO</li>
+    </ul></li>
+
+  </ul>
+
+  <p>Alle Pakete stehen bei sourceforge zur Verf&uuml;gung. Falls Sie Probleme mit
+  dem Download haben, versuchen Sie bitte einen direkten Download von
+  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  sourceforge</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
+
+  <p>Wenn Sie Probleme mit einem der obigen Pakete haben, schreiben Sie
+    bitte eine Beschreibung Ihres Problems an die <a
+    href="mailto:enigma-devel@nongnu.org">Enigma-Mailingliste</a>.</p>
+
+  <!-- TODO: Packages are not up to date yet -->
+  <!-- <p>Pakete f&uuml;r andere Betriebssysteme wurden von Dritten zur -->
+  <!-- Verf&uuml;gung gestellt:</p> -->
+
+  <!-- <ul> -->
+  <!-- <li><a href="http://packages.debian.org/sid/enigma"> -->
+  <!-- 	Debian</a></li> -->
+  <!-- <li><a href="http://www.freshports.org/games/enigma/"> -->
+  <!-- 	FreeBSD</a></li> -->
+  <!-- <li><a href="http://packages.gentoo.org/package/games-puzzle/enigma"> -->
+  <!--       Gentoo Linux</a></li> -->
+  <!-- <li><a href="http://packages.ubuntu.com/quantal/games/enigma"> -->
+  <!-- 	Ubuntu</a></li> -->
+  <!-- </ul> -->
+
+<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
+  <a name="stable">Alte stabile Version (Version 1.01)</a></h3>
 
   <p>Neben den 'vollst&auml;ndigen' Paketen stellen wir auch
   kleinere 'minimale' Pakete f&uuml;r User mit geringerer Bandbreite
